fix: .minutage thumb not showing

--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,11 @@ ul {
   border-radius: 100%;
   opacity: 0;
 }
+.minutage:hover::-webkit-slider-thumb {
+opacity: 1;
+}
+
+
 
 ::-webkit-scrollbar {
   width: 3px;
